--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,10 @@ html{
 	background:#f4f4f4;
 }
 
+body{
+	margin:0;
+}
+
 /* Typefaces
 ----------------------------------*/
 @font-face {
@@ -34,6 +38,7 @@ h1{
 	font-size:7.5rem;
 	font-family: 'HKGroteskPro-SemiBold'; sans-serif;
 	color: #272727;
+
 }
 h2{
 	font-size: 5rem;
@@ -102,9 +107,7 @@ p{
 	justify-content: center;
 }
 
-.flex-sb{
-	justify-content: space-between;
-}
+v
 
 .flex-column{
 	flex-flow: wrap column;
@@ -178,12 +181,6 @@ p{
 	color:#FF6666;
 }
 
-ul.header-content li:first-child { flex-grow:20;}
-ul.header-content li:nth-child(2) { flex-grow:1; }
-ul.header-content li:nth-child(3) { flex-grow:1; }
-ul.header-content li:last-child {
-}
-
 .song-title{
 	color:#FF6666;
 	font-family: 'HKGroteskPro-SemiBold'; sans-serif;
@@ -205,6 +202,9 @@ ul.header-content{
 	max-width: 1028px;
 }
 
+
+/* Footer
+----------------------------------*/
 .footer{
 	max-width: 1440px;
   height: 100%;
@@ -364,7 +364,7 @@ a{
 .project-title{
 	position:relative;
 	top:62px;
-	padding:0;margin:0;
+	padding:0 20px;margin:0;
 	z-index:3;
 }
 
@@ -553,13 +553,15 @@ font-size: 2.1875rem;
   margin: 0 auto;
 	z-index:-10;
 }
+
 html{
 	background:#fff;
 }
 
+.header-mobile{
+	padding:60px 40px 0 40px;
+	display:block;
 }
-
-@media only screen and (max-width: 950px) {
 
 .header-desktop{
 	display:none;
@@ -567,6 +569,26 @@ html{
 
 .header-mobile{
 	display: block;
+}
+
+.project-img{
+	top:200px;
+}
+.flex-sb{
+	flex-direction:column;
+	align-items: center;
+}
+
+}
+
+@media only screen and (max-width: 1050px) {
+
+h1{
+	font-size: 6rem;
+}
+
+.project-title{
+	top:50px;
 }
 
 }
