--- a/css/style.css
+++ b/css/style.css
@@ -228,6 +228,17 @@ ul.header-content{
 	z-index:-10;
 }
 
+.footer-container-mobile{
+	display:none;
+	max-width: 1440px;
+  height: 100%;
+  margin: 45px;
+  padding-bottom:20px;
+  border-radius: 3px 3px 3px 3px;
+  margin: 0 auto;
+	z-index:-10;
+}
+
 
 
 /* Home Intro Section
@@ -384,7 +395,6 @@ a{
 .section-full{
 	display:flex;
 	padding-top:140px;
-
 }
 
 .medium-container-ch{
@@ -411,6 +421,13 @@ a{
 	width:100%;
 	padding:0; margin: 0;
 	max-width: 930px;
+}
+.skateboard-render-static{
+	position:relative;
+	width:100%;
+	padding:0; margin: 0;
+	max-width: 930px;
+	display:none;
 }
 
 .content-container{
@@ -545,6 +562,21 @@ font-size: 2.1875rem;
 	margin:0;padding:0;
 }
 
+.footer-container-mobile{
+	display:block;
+}
+.cto-text{
+	padding-bottom:40px;
+}
+.footer-container{
+	display:none;
+}
+.pull-tech > .flex-sb{
+	flex-direction:column;
+	align-items: center;
+}
+
+
 .container {
   max-width: 1440px;
   height: 100%;
@@ -554,14 +586,36 @@ font-size: 2.1875rem;
 	z-index:-10;
 }
 
+.section-full{
+	padding-top:40px;
+}
+
 html{
 	background:#fff;
+}
+
+.medium-container-ch h2{
+	font-size: 2rem;
+	line-height: 55px;
+	margin: 0; padding: 0;
+}
+
+.medium-container{
+	padding:0 20px;
 }
 
 .header-mobile{
 	padding:60px 40px 0 40px;
 	display:block;
 }
+.pull-tech-img{
+	margin:0;
+}
+.image-double img{
+	padding:20px 0 20px 0;
+	margin:0;
+}
+
 
 .header-desktop{
 	display:none;
@@ -574,9 +628,74 @@ html{
 .project-img{
 	top:200px;
 }
+
+.challenge-container{
+	padding: 80px 40px 0 40px;
+	display:flex;
+}
+
+.pull-tech{
+	margin:40px 40px 40px 40px;
+}
+
+h4{
+	padding:0px 0 20px 0;
+}
+
+
+}
+.pull-tech-text h2{
+	font-size: 1.8rem;
+	line-height: 45px;
+	padding:0;
+}
+
+.pull-tech-drawing{
+	padding:30px 0 0 0;
+	width:100%;
+}
+
 .flex-sb{
 	flex-direction:column;
 	align-items: center;
+}
+.pull-tech-drawing-c{
+	max-width: 150px;
+}
+.section-padding{
+	padding: 40px 40px 0 40px;
+}
+.pull-quote{
+	margin:80px 40px;
+}
+.pull-quote h2{
+	font-size: 1.8rem;
+	line-height: 45px;
+	padding:0;
+}
+
+.skateboard-render-static{
+	position:relative;
+	width:100%;
+	padding:0; margin: 0;
+	max-width: 930px;
+	display:block;
+}
+
+.skateboard-render{
+	display:none;
+}
+.project-title{
+	top:108px;
+}
+h1{
+	font-size: 6.5rem;
+}
+.project-colour{
+	margin-top:-70px;
+}
+.project-header{
+	height:90vh;
 }
 
 }
