--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ h3{
 }
 
 h4{
-	font-family: 'HKGroteskPro-light'; sans-serif;
+	font-family: 'HKGroteskPro-Black'; sans-serif;
 	font-size: 1rem;
 	color: #FF6666;
 	letter-spacing: 0.09375rem;
@@ -107,7 +107,9 @@ p{
 	justify-content: center;
 }
 
-v
+.flex-sb{
+	justify-content: space-between;
+}
 
 .flex-column{
 	flex-flow: wrap column;
