--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,10 @@ body{
     src: url(../fonts/HKGroteskPro-Regular.woff) format("woff");
 }
 @font-face {
+    font-family: "HKGroteskPro-Medium";
+    src: url(../fonts/HKGroteskPro-Medium.woff) format("woff");
+  }
+@font-face {
     font-family: "HKGroteskPro-Light";
     src: url(../fonts/HKGroteskPro-Light.woff) format("woff");
 }
@@ -44,40 +48,44 @@ h1{
 h2{
 	font-size: 5rem;
 	font-family: 'HKGroteskPro-Semibold'; sans-serif;
-
+	font-weight: normal;
 }
 
 h3{
 	font-size: 1.25rem;
 	font-family: "Courier New", Courier, monospace;
 	color: #FF6666;
-	font-weight: 400;
+	font-weight: normal;
 }
 
 h4{
 	font-family: 'HKGroteskPro-Black'; sans-serif;
 	font-size: 1rem;
 	color: #FF6666;
+	font-weight: normal;
 	letter-spacing: 0.09375rem;
 	padding:40px 0 20px 0;margin: 0;
 }
 
 h5{
-font-family: "Courier New", Courier, monospace;
-font-size: 0.875rem;
-font-weight: 300;
-color: #999999 ;
-padding-top: 20px; margin:0;
+	font-family: "Courier New", Courier, monospace;
+	font-size: 0.875rem;
+	font-weight: normal;
+	color: #999999 ;
+	padding-top: 20px; margin:0;
 }
 
 p{
 	font-family: 'HKGroteskPro-Light'; sans-serif;
 	font-size: 1.125rem;
 	color: #16161D;
-	font-weight: 300;
+	font-weight: normal;
 	line-height: 2rem;
 	padding:10px 0;margin:0;
 }
+
+
+
 
 
 
@@ -109,6 +117,10 @@ p{
 }
 
 .flex-sb{
+	justify-content: space-between;
+}
+
+.flex-sb-links{
 	justify-content: space-between;
 }
 
@@ -200,10 +212,7 @@ ul.header-content{
 	color:#5B5B60;
 }
 
-.project-image{
-	width:100%;
-	max-width: 1028px;
-}
+
 
 
 /* Footer
@@ -239,7 +248,7 @@ ul.header-content{
   padding-bottom:20px;
   border-radius: 3px 3px 3px 3px;
   margin: 0 auto;
-	z-index:-10;
+  z-index:-10;
 }
 
 
@@ -254,6 +263,15 @@ ul.header-content{
 	height:700px;
 }
 
+.intro-mobile{
+	display:flex;
+	display:none;
+	max-width:1440px;
+	padding:170px 0 150px 0;
+	justify-content: center;
+	height:300px;
+}
+
 .intro-text{
 	display:flex;
 	justify-content: center;
@@ -261,11 +279,31 @@ ul.header-content{
 	align-items: center;
 	text-align:center;
 	padding:0;
-
 }
 
 .intro-text h2{
 	margin:0; padding:0;
+	font-weight: normal;
+}
+
+.intro-mobile-text{
+
+	display:flex;
+	justify-content: center;
+	flex-direction: column;
+	align-items: left;
+	text-align:left;
+	padding:0;
+}
+.intro-mobile-text h2{
+	font-size:4rem;
+	margin:0; padding:0 40px;
+	font-weight: normal;
+}
+
+.intro-mobile-text h3{
+	margin:0; padding:0 40px;
+	font-weight: normal;
 }
 
 /* Home Project Links
@@ -273,33 +311,36 @@ ul.header-content{
 
 .project-container{
 	display:flex;
-	justify-content: center;
 	width:100%;
 }
 
 .project-content{
 	display:flex;
-	justify-content: space-between;
 	position:relative;
 	width:100%;
-	height:40vh;
-	padding-bottom: 60px;
+	height:100%;
+	padding-bottom: 100px;
 	max-width: 1000px;
 }
 
 .project-image{
 	position:relative;
 	width:80%;
-	padding:0 30px 0 0;
+	padding:0 30px 0 40px;
 	max-width: 550px;
 	align-self: center;
 }
 
 .project-text{
-	width:400px;
-	padding:0 0 0 30px;
+	width:100%;
+	max-width:420px;
+	padding:0 40px 0 30px;
 	position: relative;
 	align-self: center;
+}
+
+.project-text h4{
+	font-family: 'HKGroteskPro-Medium'; sans-serif;
 }
 
 
@@ -312,13 +353,19 @@ a{
 }
 
 .underline {;
-	background-image: linear-gradient(to right, rgba(255, 255, 255, 0) 50%, #0099ff 50%);
   background-position: 0 78%; /* position it at the bottom left */
   background-repeat: repeat-x; /* make it repeat horizontally only (so the fixed height is apparent) */
   background-size: 200% 10px; /* set a fixed height */
   transition: background-position 0.5s;
-
 }
+.underline-blue{
+	background-image: linear-gradient(to right, rgba(255, 255, 255, 0) 50%, #0099ff 50%);
+}
+
+.underline-red{
+	background-image: linear-gradient(to right, rgba(255, 255, 255, 0) 50%, #FF3333 50%);
+}
+
 
 .underline:hover {
   background-position: -100% 78%; /* move it to the right, keeping it at the bottom */
@@ -326,7 +373,7 @@ a{
 
 
 .underline:active, .underline:visited {
-	color:##272727;
+	color:#272727;
 }
 
 .underline:visited{
@@ -341,7 +388,116 @@ a{
 	display: inline-block;
   position: relative;
   padding-bottom: 0px;
+	font-weight: normal;
 }
+
+/* About Page
+----------------------------------*/
+.about-container{
+	display:flex;
+	background:#2A303B;
+	margin-top: 175px;
+	height:100%;
+	padding: 240px 40px;
+}
+
+
+.about-content{
+	width:100%;
+	max-width: 690px;
+
+}
+
+.about-content h2{
+	font-size: 2.625rem;
+	color:#FF6666;
+	padding:0 0 48px 0; margin: 0;
+}
+
+.about-content h2{
+	font-size: 2.625rem;
+	color:#FF6666;
+	padding:0 0 48px 0; margin: 0;
+}
+
+.about-content p{
+	color:white;
+	-webkit-font-smoothing: antialiased;
+	-moz-font-smoothing: antialiased;
+	-o-font-smoothing: antialiased;
+}
+
+.about-content a{
+	color:#FF6666;
+}
+
+.about-content a:hover{
+	font-weight: bold;
+}
+
+.social-links{
+	list-style:none;
+	display:flex;
+	margin:0; padding:0;
+}
+
+.social-about li{
+	padding:48px 32px 0 0; margin:0;
+
+}
+
+.social-about a{
+	color:white;
+}
+
+.social-about a:hover{
+	color:#FF6666;
+}
+.recommendations-container{
+	display:flex;
+}
+
+.recommendations{
+	padding:48px 0 0 0; margin:0;
+}
+
+.recommendations li{
+	font-family: "Courier New", Courier, monospace;
+	font-size: 1rem;
+	font-weight: normal;
+	color: white ;
+}
+
+.reco-title h4{
+	font-family: "Courier New", Courier, monospace;
+	font-weight: 600;
+	letter-spacing: 3.5px;
+	color:white;
+	padding:48px 0 0 0; margin:0;
+	-webkit-font-smoothing: antialiased;
+	-moz-font-smoothing: antialiased;
+	-o-font-smoothing: antialiased;
+}
+.reco-list{
+	display: flex;
+	width:100%;
+	max-width:530px;
+}
+.reco-links a{
+	color:white;
+}
+.reco-links{
+	list-style:none;
+	line-height: 1.5rem;
+	margin:0; padding:0;
+	-webkit-font-smoothing: antialiased;
+	-moz-font-smoothing: antialiased;
+	-o-font-smoothing: antialiased;
+}
+
+
+
+
 
 /* Project Page Header
 ----------------------------------*/
@@ -349,8 +505,8 @@ a{
 
 .project-header{
 	display:flex;
-	justify-content: flex-end;
-	flex-flow: column;
+	justify-content: center;
+	flex-flow: column wrap;
 	align-items: center;
 	position:relative;
 	width:100%;
@@ -359,14 +515,19 @@ a{
 	z-index: 1;
 }
 
-.project-img{
+.project-header-img{
 	position:absolute;
-	top:40px;
+	width:100%;
+}
+
+.project-header-img-container{
+	position:relative;
 	max-width: 1028px;
 	width:100%;
 }
 
 .project-colour{
+	position:relative;
 	background: #0099FF;
 	padding:0;margin:0;
 	height:390px;
@@ -452,6 +613,9 @@ a{
 	display:flex;
 	align-items: center;
 	width:100%;
+	-webkit-font-smoothing: antialiased;
+	-moz-font-smoothing: antialiased;
+	-o-font-smoothing: antialiased;
 }
 
 .pull-tech{
@@ -565,6 +729,14 @@ font-size: 2.1875rem;
 	margin:0;padding:0;
 }
 
+.about-container{
+	padding: 140px 40px;
+}
+
+.project-text{
+	width: auto;
+}
+
 .footer-container-mobile{
 	display:block;
 }
@@ -582,6 +754,13 @@ font-size: 2.1875rem;
 	align-items: center;
 }
 
+.intro-mobile{
+	display:block;
+}
+
+.intro{
+	display:none;
+}
 
 .container {
   max-width: 1440px;
@@ -590,6 +769,11 @@ font-size: 2.1875rem;
   padding:0px;
   margin: 0 auto;
 	z-index:-10;
+}
+
+.project-text{
+	padding:0;
+	margin: 20px 40px;
 }
 
 .section-full{
@@ -631,10 +815,6 @@ html{
 	display: block;
 }
 
-.project-img{
-	top:200px;
-}
-
 .challenge-container{
 	padding: 80px 40px 0 40px;
 	display:flex;
@@ -658,7 +838,10 @@ h4{
 	padding:30px 0 0 0;
 	width:100%;
 }
-
+.flex-sb-links{
+	flex-direction:column;
+	align-items: flex-start
+}
 .flex-sb{
 	flex-direction:column;
 	align-items: center;
@@ -707,7 +890,7 @@ h1{
 }
 
 .project-header{
-	height:90vh;
+	height:700px;
 }
 
 }
