--- a/css/style.css
+++ b/css/style.css
@@ -731,11 +731,17 @@ font-size: 2.1875rem;
 
 .about-container{
 	padding: 140px 40px;
+	margin:50px 0;
 }
 
 .project-text{
-	width: auto;
+	width: 80%;
 }
+
+.project-text a:visited{
+	color:#16161D;
+}
+
 
 .footer-container-mobile{
 	display:block;
