--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 html{
 	height: 100%;
-	background:#f4f4f4;
+	background:#EEEEEE; /* OR f4f4f4 */
 }
 
 body{
@@ -33,6 +33,11 @@ body{
 ----------------------------------*/
 .site-frame{
 	margin:45px;
+	height:100%;
+}
+
+.site-frame-home{
+	margin:45px 45px 0 45px;
 	height:100%;
 }
 
@@ -93,13 +98,14 @@ p{
 ----------------------------------*/
 .container {
   max-width: 1440px;
+  position:relative;
   height: 100%;
   margin: 45px;
   padding:0px;
   border-radius: 3px 3px 3px 3px;
   margin: 0 auto;
 	background:#fff;
-	z-index:-10;
+	z-index:1;
 }
 .spacer.s0{
 	min-height: 1px;
@@ -130,6 +136,10 @@ p{
 
 .flex-start{
 	justify-content: flex-start;
+}
+
+.flex-end{
+	justify-content: flex-end;
 }
 
 /* Background Colours
@@ -248,7 +258,7 @@ ul.header-content{
   padding-bottom:20px;
   border-radius: 3px 3px 3px 3px;
   margin: 0 auto;
-  z-index:-10;
+  z-index:2;
 }
 
 
@@ -318,29 +328,46 @@ ul.header-content{
 	display:flex;
 	position:relative;
 	width:100%;
-	height:100%;
-	padding-bottom: 100px;
+	padding: 100px 40px;
 	max-width: 1000px;
+}
+.project-content-center{
+	display:flex;
+	position:relative;
+	width:100%;
 }
 
 .project-image{
 	position:relative;
-	width:80%;
-	padding:0 30px 0 40px;
-	max-width: 550px;
+	width:100%;
+	left:50px;
+	max-height:470px;
 	align-self: center;
+	z-index: 2;
 }
 
 .project-text{
-	width:100%;
-	max-width:420px;
-	padding:0 40px 0 30px;
+	max-width:330px;
 	position: relative;
 	align-self: center;
+	right:50px;
+	z-index:3;
 }
 
 .project-text h4{
 	font-family: 'HKGroteskPro-Medium'; sans-serif;
+	padding: 0 0 10px 0;
+}
+
+.project-text h2{
+	padding:0;margin: 0;
+	letter-spacing: 0.125rem;
+	line-height: 70px;
+	display: inline-block;
+  position: relative;
+  padding-bottom: 0px;
+	font-weight: normal;
+	font-family: 'HKGroteskPro-Black'; sans-serif;
 }
 
 
@@ -366,6 +393,10 @@ a{
 	background-image: linear-gradient(to right, rgba(255, 255, 255, 0) 50%, #FF3333 50%);
 }
 
+.underline-yellow{
+	background-image: linear-gradient(to right, rgba(255, 255, 255, 0) 50%, #F2C01C 50%);
+}
+
 
 .underline:hover {
   background-position: -100% 78%; /* move it to the right, keeping it at the bottom */
@@ -380,23 +411,14 @@ a{
 	color:#272727;
 }
 
-.project-text h2{
-	font-size: 4.375rem;
-	padding:0;margin: 0;
-	letter-spacing: 1px;
-	line-height: 62px;
-	display: inline-block;
-  position: relative;
-  padding-bottom: 0px;
-	font-weight: normal;
-}
+
 
 /* About Page
 ----------------------------------*/
 .about-container{
 	display:flex;
 	background:#2A303B;
-	margin-top: 175px;
+	margin: 175px 0 0 0;
 	height:100%;
 	padding: 240px 40px;
 }
@@ -704,9 +726,10 @@ a{
 }
 
 .cto-text h2{
-font-size: 2.1875rem;
+	font-size: 2.1875rem;
 	line-height: 55px;
-	padding-right: 15px;
+	margin:0;
+	padding: 0 15px 40px 0;
 	max-width:450px;
 }
 
@@ -729,18 +752,38 @@ font-size: 2.1875rem;
 	margin:0;padding:0;
 }
 
+.project-container{
+	height:100vh;
+}
+
+.site-frame-home{
+	height:100%;
+	margin:0;padding:0;
+}
+
 .about-container{
 	padding: 140px 40px;
-	margin:50px 0;
+	margin:50px 0 0 0;
 }
 
 .project-text{
 	width: 80%;
+	right:0;
+}
+
+.project-image{
+	left:0px;
+	margin:40px;
+}
+
+.project-text a{
+	color:#16161D;
 }
 
 .project-text a:visited{
 	color:#16161D;
 }
+
 
 
 .footer-container-mobile{
@@ -750,6 +793,8 @@ font-size: 2.1875rem;
 .cto-text{
 	padding-bottom:40px;
 }
+
+
 
 .footer-container{
 	display:none;
@@ -852,7 +897,9 @@ h4{
 	flex-direction:column;
 	align-items: center;
 }
-
+.flex-center{
+	flex-direction:column;
+}
 .pull-tech-drawing-c{
 	max-width: 150px;
 }
