--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,6 @@ body{
 /* White Site Frame
 ----------------------------------*/
 .site-frame{
-	margin:45px;
 	height:100%;
 }
 
@@ -88,11 +87,6 @@ p{
 	line-height: 2rem;
 	padding:10px 0;margin:0;
 }
-
-
-
-
-
 
 /* Top Container
 ----------------------------------*/
@@ -303,16 +297,16 @@ ul.header-content{
 	flex-direction: column;
 	align-items: left;
 	text-align:left;
-	padding:0;
+	padding:40px;
 }
 .intro-mobile-text h2{
 	font-size:4rem;
-	margin:0; padding:0 40px;
+	margin:0; padding:0;
 	font-weight: normal;
 }
 
 .intro-mobile-text h3{
-	margin:0; padding:0 40px;
+	margin:0; padding:0;
 	font-weight: normal;
 }
 
@@ -321,35 +315,26 @@ ul.header-content{
 
 .project-container{
 	display:flex;
-	width:100%;
 }
 
 .project-content{
 	display:flex;
-	position:relative;
+	align-items:center;
 	width:100%;
 	padding: 100px 40px;
 	max-width: 1000px;
 }
-.project-content-center{
-	display:flex;
-	position:relative;
-	width:100%;
-}
 
 .project-image{
-	position:relative;
 	width:100%;
-	left:50px;
+	/* FIX THIS
+	left:50px;*/
 	max-width:725px;
-	align-self: center;
 	z-index: 2;
 }
 
 .project-text{
 	max-width:330px;
-	position: relative;
-	align-self: center;
 	right:50px;
 	z-index:3;
 }
@@ -748,18 +733,12 @@ a{
 ----------------------------------*/
 @media only screen and (max-width: 750px) {
 
-
 .site-frame{
-	height:100%;
 	margin:0;padding:0;
 }
 
-.project-container{
-	height:100vh;
-}
 
 .site-frame-home{
-	height:100%;
 	margin:0;padding:0;
 }
 
@@ -767,21 +746,22 @@ a{
 	padding: 140px 40px;
 	margin:50px 0 0 0;
 }
+
 .project-content{
 	padding:0;margin:0;
 }
+
+.project-container{
+	height:100vh;
+}
+
 .project-text{
-	align-self: flex-start;
-	width: 80%;
-	right:0;
+		align-self: flex-start;
+	padding:40px;
 }
 
 .project-image{
-	align-self: flex-start;
-	width:100%;
-	left:0px;
-	padding:40px;
-	margin:0;
+	margin:0; padding:40px;
 }
 
 .project-text a{
@@ -822,17 +802,8 @@ a{
 }
 
 .container {
-  max-width: 1440px;
-  height: 100%;
-  margin: 0px;
-  padding:0px;
   margin: 0 auto;
 	z-index:-10;
-}
-
-.project-text{
-	padding:0;
-	margin: 20px 40px;
 }
 
 .section-full{
