--- a/css/style.css
+++ b/css/style.css
@@ -136,6 +136,10 @@ p{
 	justify-content: space-between;
 }
 
+.flex-sa{
+	justify-content: space-around;
+}
+
 .flex-sb-links{
 	justify-content: space-between;
 }
@@ -253,10 +257,8 @@ ul.header-content{
 .footer-container {
   max-width: 1440px;
   height: 100%;
-  margin: 45px;
   padding:0px;
-  border-radius: 3px 3px 3px 3px;
-  margin: 0 auto;
+  margin:0 0 20px 0 ;
 	z-index:-10;
 }
 
@@ -566,7 +568,7 @@ a{
 ----------------------------------*/
 .highlight-colour-project{
 	position:absolute;
-	top:405px;
+	top:420px;
 	width:100%;
 	height:420px;
 	z-index:1;
@@ -618,10 +620,13 @@ a{
 
 .project-title{
 	position:relative;
-	top:-34px;
 	padding:0 20px;margin:0;
+	top:-19px;
 	z-index:3;
+	text-align:center;
 }
+
+
 /* Gradient Background
 ----------------------------------*/
 .gradient-section{
@@ -641,6 +646,7 @@ a{
 ----------------------------------*/
 
 .challenge-container{
+	position:relative;
 	padding: 270px 40px 50px 40px;
 	display:flex;
 }
@@ -659,6 +665,7 @@ a{
 	max-width: 930px;
 }
 
+
 .medium-container-ch h2{
 	font-size: 2.8125rem;
 	line-height: 65px;
@@ -672,6 +679,11 @@ a{
 .medium-container{
 	max-width: 930px;
 	width:100%;
+}
+
+.breakout-image{
+	position:relative;
+	max-width: 445px
 }
 
 .skateboard-render{
@@ -758,7 +770,7 @@ a{
 	position:relative;
 	align-self: center;
 	width:80%;
-	padding:20px;
+	padding:0 20px 0 60px;
 	max-width: 200px;
 	max-height:321px;
 }
@@ -791,8 +803,16 @@ a{
 	background:#FFF;
 	width:100%;
 }
+
 .image-double img{
 	position:relative;
+	width:100%;
+	max-width: 450px
+}
+
+.image-double-float img{
+	position:relative;
+	top:-150px;
 	width:100%;
 	max-width: 450px
 }
@@ -806,13 +826,24 @@ a{
 }
 
 .cto-text h4{
-	border-radius: 3px;
-	border-width: 2px;
-	border-style:solid;
-	color:white;
-	width: 100%;
-	max-width:145px;
-	padding:10px 45px 10px 45px;
+	color: #FFFFFF;
+  padding: 12px 17px;
+  border: 2px solid #FFFFFF;
+  border-radius: 2px;
+  display: inline-block;
+  text-align: center;
+  cursor: pointer;
+  background-image: linear-gradient(135deg, #FFFFFF 50%, transparent 51%);
+  background-size: 100px 100px; /* some initial size to get the slanted appearance */
+  background-position: -50px -50px; /* negative positioning to hide it initially */
+  background-repeat: no-repeat;
+  transition: all ease 0.5s;
+}
+
+.cto-text h4:hover {
+  background-size: 200% 200%; /* 200% because gradient is colored only for 50% */
+  background-position: 0px 0px; /* bring it fully into view */
+  color: #0099ff;
 }
 
 
@@ -848,6 +879,9 @@ a{
 	height:100vh;
 }
 
+.project-title{
+	text-align:left;
+}
 .project-text{
 	align-self: flex-start;
 	padding:40px;
@@ -877,7 +911,7 @@ a{
 }
 
 .cto-text{
-	padding-bottom:40px;
+	padding-top:40px;
 }
 
 
@@ -891,6 +925,13 @@ a{
 	align-items: center;
 }
 
+.rounded-corners > .flex-sb{
+	flex-direction:column-reverse;
+	align-items: center;
+}
+
+
+
 .intro-mobile{
 	display:block;
 }
@@ -901,10 +942,6 @@ a{
 
 .container {
   margin: 0 auto;
-}
-
-.section-full{
-	padding-top:40px;
 }
 
 html{
@@ -944,12 +981,15 @@ html{
 }
 
 .challenge-container{
-	padding: 80px 40px 0 40px;
+	padding: 120px 40px 40px 40px;
 	display:flex;
 }
 
 .pull-tech{
+	position:relative;
 	margin:40px 40px 40px 40px;
+	padding:40px;
+	box-sizing: border-box;
 }
 
 h4{
@@ -961,6 +1001,7 @@ h4{
 	line-height: 45px;
 	padding:0;
 }
+
 
 .pull-tech-drawing{
 	padding:30px 0 0 0;
@@ -974,15 +1015,24 @@ h4{
 	flex-direction:column;
 	align-items: center;
 }
+.flex-sa{
+	flex-direction:column;
+	align-items: center;
+}
 .flex-center{
 	flex-direction:column;
 }
 .pull-tech-drawing-c{
 	max-width: 150px;
+	padding:20px;
 }
 
 .section-padding{
-	padding: 40px 40px 0 40px;
+	padding: 80px 40px 0 40px;
+}
+
+.section-full{
+	padding-top:80px;
 }
 
 .pull-quote{
