--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ html{
 
 body{
 	margin:0;
+
 }
 
 /* Typefaces
@@ -41,6 +42,9 @@ body{
 	height:100%;
 }
 
+.hidden {
+    display: none;
+}
 /* Global
 ----------------------------------*/
 h1{
@@ -220,6 +224,7 @@ p{
 
 .header-desktop a:hover{
 	color:#FF6666;
+	transition: color .3s ease-in-out;
 }
 
 .header-mobile a{
@@ -286,18 +291,16 @@ ul.header-content{
 
 /* Home Intro Section
 ----------------------------------*/
-#highlight-colour{
-	display:block;
+.highlight-colour{
+	animation-delay: 1.5s;
 	position:absolute;
 	top:405px;
 	width:100%;
-	height:320px;
+	height:0%;
 	background-color:#FCEA62;
 	z-index:1;
-	-webkit-transition: all 0.5s ease-in-out 0s;
-  -moz-transition: all 0.5s ease-in-out 0s;
-  -o-transition: all 0.5s ease-in-out 0s;
-  transition: all 0.5s ease-in-out 0s;
+	-webkit-transition: all 600ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  transition:         all 600ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 .intro{
 	display:flex;
@@ -326,6 +329,23 @@ ul.header-content{
 	position:relative;
 	top:-20px;
 	z-index: 2;
+}
+
+.animation-projects{
+	animation-delay:1.5s;
+}
+
+.intro-h2{
+	animation-delay:.3s;
+}
+
+.animation-about{
+	animation-delay: 2.0s;
+}
+
+
+.intro-h3{
+	animation-delay:.3s;
 }
 
 .intro-text h2{
@@ -357,6 +377,7 @@ ul.header-content{
 
 .project-container{
 	display:flex;
+	animation-delay: 1.5s;
 }
 
 .project-content{
@@ -368,6 +389,15 @@ ul.header-content{
 }
 
 .project-image{
+	position:relative;
+	width:100%;
+	left:50px;
+	max-width:725px;
+	z-index: 3;
+}
+
+.project-image-mobile img{
+	display:none;
 	position:relative;
 	width:100%;
 	left:50px;
@@ -481,7 +511,7 @@ a{
 
 .about-content{
 	width:100%;
-	max-width: 840px;
+	max-width: 690px;
 	/*max-width: 690px;*/
 
 }
@@ -622,6 +652,7 @@ p.larger-p{
 
 
 .project-header-image{
+	animation-delay: 0.3s;
 	position:absolute;
 	width:100%;
 }
@@ -653,6 +684,7 @@ p.larger-p{
 }
 
 .project-title{
+	animation-delay: .6s;
 	position:relative;
 	padding:0 20px;margin:0;
 	top:-19px;
@@ -712,8 +744,8 @@ p.larger-p{
 
 
 .medium-container-ch h2{
-	font-size: 2.8125rem;
-	line-height: 65px;
+	font-size: 2.1875rem;
+	line-height: 54px;
 	margin: 0; padding: 0;
 }
 
@@ -903,6 +935,44 @@ p.larger-p{
 }
 
 
+@-webkit-keyframes highlight {
+    0% {
+       height:0;
+    }
+
+    100% {
+        height:7%;
+    }
+}
+
+@-moz-keyframes highlight{
+    0% {
+        height:0;
+    }
+
+    100% {
+        height:7%;
+    }
+}
+
+@keyframes highlight {
+    0% {
+        height:0;
+    }
+
+    100% {
+       height:7%;
+    }
+}
+
+.extend {
+    -webkit-animation: highlight 500ms 1 forwards;
+    -moz-animation: highlight 500ms 1 forwards;
+    -o-animation: highlight 500ms 1 forwards;
+    animation: highlight 500ms 1 forwards;
+    transition: height 500ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
 
 
 /* Mobile
@@ -937,6 +1007,7 @@ p.larger-p{
 
 .project-title{
 	text-align:left;
+	top:2px;
 }
 .project-text{
 	align-self: flex-start;
@@ -945,6 +1016,14 @@ p.larger-p{
 }
 
 .project-image{
+	display:none;
+	margin:0; padding: 40px 40px 10px 40px;
+	box-sizing: border-box;
+	left:0;
+}
+
+.project-image-mobile img{
+	display:block;
 	margin:0; padding: 40px 40px 10px 40px;
 	box-sizing: border-box;
 	left:0;
@@ -979,6 +1058,7 @@ p.larger-p{
 #highlight-colour{
 	display:none;
 }
+
 .gradient-section{
 	height:950px;
 
