--- a/css/style.css
+++ b/css/style.css
@@ -691,7 +691,7 @@ p.larger-p{
 }
 
 .gradient-blue{
-	background: linear-gradient(-45deg, #0099EE, #0961BF);
+	background: linear-gradient(-45deg, #0066ff, #0066ff);
 }
 
 .gradient-red{
