--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ h3{
 }
 
 h4{
-	font-family: 'HKGroteskPro-Black'; sans-serif;
+	font-family: 'HKGroteskPro-Semibold'; sans-serif;
 	font-size: 1rem;
 	color: #FF6666;
 	font-weight: normal;
@@ -94,12 +94,15 @@ h5{
 }
 
 p{
-	font-family: 'HKGroteskPro-Light'; sans-serif;
-	font-size: 1.125rem;
+	font-family: 'HKGroteskPro-Regular'; sans-serif;
+	font-size: 1.25rem;
 	color: #16161D;
 	font-weight: normal;
-	line-height: 2rem;
+	line-height: 2.25rem;
 	padding:10px 0;margin:0;
+	-webkit-font-smoothing: antialiased;
+	-moz-font-smoothing: antialiased;
+	-o-font-smoothing: antialiased;
 }
 
 #cS-1, #cS-2, #cS-3{
@@ -122,6 +125,17 @@ p{
   margin: 0 auto;
 	background:#fff;
 }
+.container_proj {
+  max-width: 1880px;
+  position:relative;
+  height: 100%;
+  margin: 48px;
+  padding:0px;
+  border-radius: 3px 3px 3px 3px;
+  margin: 0 auto;
+	background:#fff;
+}
+
 
 .spacer.s1{
 	min-height: 1px;
@@ -183,6 +197,10 @@ p{
 
 .blue{
 	background:#0066FF;
+}
+
+.yellow{
+	background:#FFCF00;
 }
 
 .red{
@@ -732,8 +750,8 @@ p.larger-p{
 
 
 .medium-container-ch h2{
-	font-size: 2.1875rem;
-	line-height: 54px;
+	font-size: 2rem;
+	line-height: 3rem;
 	margin: 0; padding: 0;
 }
 
@@ -803,6 +821,13 @@ p.larger-p{
 	margin:0px 40px 0px 40px;
 	}
 
+.pull-tech-imgfull{
+	display:flex;
+	align-items: center;
+	max-width: 1000px;
+	width:100%;
+	margin:0px 40px 0px 40px;
+	}
 
 .pull-tech-c{
 	display:flex;
@@ -879,6 +904,20 @@ p.larger-p{
 	max-width: 450px
 }
 
+
+.image-screen img{
+	width:100%;
+	padding:0px 0 80px 0;
+	max-width: 1170px
+}
+.image-screen-small img{
+	width:100%;
+	padding:0px 0 80px 0;
+	max-width: 600px
+}
+
+
+
 .image-double-float img{
 	position:relative;
 	width:100%;
@@ -893,33 +932,50 @@ p.larger-p{
 	max-width: 650px
 }
 
-.cto-text h2{
+.cta-text h2{
+	font-family: 'HKGroteskPro-Semibold'; sans-serif;
 	font-size: 2.1875rem;
 	line-height: 55px;
 	margin:0;
 	padding: 0 15px 40px 0;
 	max-width:450px;
 }
-
-.cto-text h4{
-	color: #FFFFFF;
-  padding: 12px 17px;
-  border: 2px solid #FFFFFF;
-  border-radius: 2px;
-  display: inline-block;
-  text-align: center;
-  cursor: pointer;
-  background-image: linear-gradient(135deg, #FFFFFF 50%, transparent 51%);
-  background-size: 100px 100px; /* some initial size to get the slanted appearance */
-  background-position: -50px -50px; /* negative positioning to hide it initially */
-  background-repeat: no-repeat;
-  transition: all ease 0.5s;
+.pull-tech-imgfull > .cta-text{
+	padding-bottom: 40px
 }
 
-.cto-text h4:hover {
-  background-size: 200% 200%; /* 200% because gradient is colored only for 50% */
-  background-position: 0px 0px; /* bring it fully into view */
-  color: #0099ff;
+.pull-tech-imgfull > .cta-text h4{
+	color: #1358DB;
+	border: 2px solid #1358DB;
+	background-image: linear-gradient(135deg, #1358DB 50%, transparent 51%);
+	padding: 12px 160px;
+}
+
+.pull-tech-imgfull > .cta-text h4:hover{
+	color: white;
+	border: 2px solid #1358DB;
+}
+
+.cta-text h4{
+	font-family: 'HKGroteskPro-Semibold'; sans-serif;
+	color: #FFFFFF; 
+	padding: 12px 16px;
+	border: 2px solid #FFFFFF;
+	border-radius: 2px;
+	display: inline-block;
+	text-align: center;
+	cursor: pointer;
+	background-image: linear-gradient(135deg, #FFFFFF 50%, transparent 51%);
+	background-size: 100px 100px; /* some initial size to get the slanted appearance */
+	background-position: -50px -50px; /* negative positioning to hide it initially */
+	background-repeat: no-repeat;
+	transition: all ease 0.5s;
+}
+
+.cta-text h4:hover {
+	background-size: 200% 200%; /* 200% because gradient is colored only for 50% */
+	background-position: 0px 0px; /* bring it fully into view */
+	color: #0099ff;
 }
 
 
@@ -1060,7 +1116,7 @@ h2{
 	display:block;
 }
 
-.cto-text{
+.cta-text{
 	padding-top:40px;
 }
 
